--- a/web/register.html
+++ b/web/register.html
@@ -17,8 +17,8 @@
     background-size:cover;
     background-attachment:fixed;
   }
-  .overlay{ min-height:100%; background: rgba(255,255,255,.72); display:flex; align-items:center; justify-content:center; padding:2rem 1rem }
-  .card{ width:100%; max-width:440px; background:#fff; border-radius:16px; box-shadow:0 10px 30px rgba(2,12,27,.18); padding:1.25rem }
+  .overlay{ min-height:100%; background: rgba(255,255,255,.20); display:flex; align-items:center; justify-content:center; padding:2rem 1rem }
+  .card{ width:100%; max-width:440px; background: rgba(255,255,255,.50); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-radius:16px; box-shadow:0 10px 22px rgba(2,12,27,.10); padding:1.25rem }
   h1{ margin:.2rem 0 1rem; font-size:1.35rem }
   label{ display:block; margin:.45rem 0 .2rem; color:var(--muted); font-size:.92rem }
   input{ width:100%; padding:.6rem .7rem; border-radius:10px; border:2px solid #b3d4ff; box-sizing:border-box }
